--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.507.0",
     "next": "15.3.0",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
