--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "scripts": {
+    "build": "NEXT_IGNORE_TYPE_ERRORS=true next build"
   }
+
 }
